tests/fixtures/valid/metadata_with_bounds.gpx
<?xml version="1.0" encoding="UTF-8"?>
<gpx xmlns="http://www.topografix.com/GPX/1/1" version="1.1" creator="Test">
  <metadata>
    <name>GPX with bounds</name>
    <bounds minlat="52.5200" minlon="13.4050" maxlat="52.5300" maxlon="13.4150"/>
  </metadata>
</gpx>
