tests/fixtures/invalid/missing_bounds_minlat.gpx
<?xml version="1.0" encoding="UTF-8"?>
<gpx xmlns="http://www.topografix.com/GPX/1/1" version="1.1" creator="Test">
  <metadata>
    <bounds minlon="13.4" maxlat="52.6" maxlon="13.5"/>
  </metadata>
</gpx>
